<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/LabelLast"
                android:textColor="#070707"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/inputname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="Lastname"
                android:inputType="textPersonName"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/labelFirtName"

                android:textColor="#070707"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/imputlname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="Firstname"
                android:inputType="textPersonName"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/labelUsername"
                android:textColor="#070707"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:ems="10"

                android:hint="Username"
                android:inputType="textEmailAddress"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/labelpassword"
                android:textColor="#070707"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/inputpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:ems="10"

                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <EditText
                android:id="@+id/et_mostrar_fecha_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/formato_fecha"
                android:inputType="date"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageButton
                android:id="@+id/ib_obtener_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_twitt"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/LabelCount"
                android:textColor="#070707"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/coun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@drawable/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/LabelPhone"
                android:textColor="#070707"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:ems="10"

                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelL0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:text="@string/LabelGender"
                android:textColor="#070707"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/genr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@drawable/back" />

        </LinearLayout>

        <Button
            android:id="@+id/ButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:background="@color/red"
            android:onClick="openUserlist"
            android:text="@string/ButtonRegi"
            android:textSize="30sp"
            app:backgroundTint="@color/red" />

    </LinearLayout>
</RelativeLayout>